Adapt pdf charts positions, add search form to submissions list and change navegation links

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,6 +54,7 @@ $state-danger-border: darken(adjust-hue($state-danger-bg, -10), 5%) !default;
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "bootstrap-datetimepicker";
 @import "font-awesome";
 @import "common";
 @import "answers";
