--- a/app/views/submissions/new.html.haml
+++ b/app/views/submissions/new.html.haml
@@ -43,5 +43,10 @@
 
 - if @survey.avatar.present?
   :css
-    body { background: url(#{@survey.avatar.url}); }
+    body  { background: url(#{@survey.avatar.url}) no-repeat center center fixed;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+          }
 
