--- a/app/views/surveys/_survey.html.haml
+++ b/app/views/surveys/_survey.html.haml
@@ -8,7 +8,10 @@
       %p
         = survey.description
       - if policy(survey).show?
-        = link_to "SHOW SURVEY INFORMATION", [survey.customer, survey]
+        = link_to "SHOW SURVEY INFORMATION", [survey.customer, survey],
+          class: "btn btn-sm btn-primary"
+      = link_to fa_icon("pencil", text: "SUBMIT SURVEY"), [:new, survey, :submission],
+        class: "btn btn-sm btn-default"
     .col-md-4
       .dropdown.pull-right
         %a.dropdown-toggle{"aria-expanded": "false", "aria-haspopup": "true",
@@ -19,8 +22,6 @@
             questions
             %span.caret
         %ul.dropdown-menu
-          %li
-            = link_to "Submit this survey", [:new, survey, :submission]
           - if policy(survey).update?
             %li
               = link_to "Edit survey", [:edit, survey.customer, survey]
