Change s3 bucket and add links to survey list

--- a/app/views/customers/_customer.html.haml
+++ b/app/views/customers/_customer.html.haml
@@ -6,7 +6,7 @@
       %p
         = customer.description
       = link_to fa_icon("list", text: "SHOW ALL CUSTOMER SURVEYS"), [customer, :surveys],
-        class: "btn btn-sm btn-default"
+        class: "btn btn-xs btn-default"
     .col-md-3
       .dropdown
         %a.dropdown-toggle{"aria-expanded": "false", "aria-haspopup": "true",
