--- a/app/views/answers/_index.html.haml
+++ b/app/views/answers/_index.html.haml
@@ -11,11 +11,13 @@
           %thead
             %tr
               %th
-                Answered on
-              %th
-                User
+                Question
               %th
                 Answer response
+              %th
+                Answer date
+              %th
+                Answered by
           %tbody
             = render @answers
       .modal-footer
