--- a/app/views/submission_notifier_mailer/rating_notifier.html.haml
+++ b/app/views/submission_notifier_mailer/rating_notifier.html.haml
@@ -2,13 +2,33 @@
 %html
   %head
     %meta{content: "text/html; charset=UTF-8", "http-equiv": "Content-Type"}
+    %title #{@submission.survey.name} rating notification
+    %link{href: "https://fonts.googleapis.com/css?family=Roboto+Condensed", rel: "stylesheet"}
+    :css
+      body  { font-family: 'Roboto Condensed', sans-serif;
+        color: #767676;
+      }
+      .wrapper {
+        padding: 5px;
+        background-color: #F1F1F1;
+        border-radius: 3px;
+        width: 50%;
+        margin-bottom: 10px;
+      }
+      h4 {
+        color: #f72969;
+      }
   %body
-    %h1
+    = image_tag "logo.png", width: 200
+    %h2
       The survey #{@submission.survey.name} has been rated with the following answers:
     - @submission.answers.each do |answer|
       - if answer.answer_raiting.present?
-        %h2
-          = answer.question.title
-        %p
-          Response:
-          = answer.answer_raiting.response
+        .wrapper
+          %h3
+            Question -
+            = answer.question.title
+          %h4
+            Response:
+            %span
+              = answer.answer_raiting.response
