--- a/app/views/submission_notifier_mailer/rating_notifier.html.haml
+++ b/app/views/submission_notifier_mailer/rating_notifier.html.haml
@@ -5,7 +5,8 @@
     %title #{@submission.survey.name} rating notification
     %link{href: "https://fonts.googleapis.com/css?family=Roboto+Condensed", rel: "stylesheet"}
     :css
-      body  { font-family: 'Roboto Condensed', sans-serif;
+      body  {
+        font-family: 'Roboto Condensed', sans-serif;
         color: #767676;
       }
       .wrapper {
