Finish sortable questions and change survey redirections

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -98,6 +98,11 @@ footer {
   margin-left: 0px !important;
 }
 
+small.handle {
+  color: #777;
+  cursor: move;
+}
+
 .image-fields {
   margin-bottom: 15px;
   .media-body {
