Remove question_type model and create static array. Add info_image and info_body to questions

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -114,6 +114,10 @@ small.handle {
   }
 }
 
+.informative_fields {
+  display: none;
+}
+
 .header-content {
   padding: 5px 110px 5px 110px;
   border-bottom: 1px solid #ACACAC;
