--- a/app/views/surveys/_question_fields.html.haml
+++ b/app/views/surveys/_question_fields.html.haml
@@ -5,27 +5,34 @@
     Question
 
   = f.input :title, label: false, placeholder: "Whats your question?"
-  = f.input :question_type_id, label: false,
+  = f.input :question_type, label: false,
     input_html: { data: { behavior: "question_type" } },
-    collection: QuestionType.all.collect {|q| [ q.name, q.id ] },
+    collection: Question::QUESTION_TYPES,
     prompt: "--- Select type of answer ---"
   = f.hidden_field :position, class: "question-position",
     value: (f.options[:child_index] + 1).abs
+
+  .form-group
+    %button.btn.btn-sm.btn-primary{"data-behavior": "btn-informative"}
+      Show informative content
+    .informative_fields
+      %h4 Add informative content
+      = render "informative_fields", f: f
 
   = f.fields_for :choices do |builder|
     = render "choice_fields", f: builder
 
   = f.fields_for :images do |builder|
-    = render "image_fields", f: builder, parent: f.object
+    = render "image_fields", f: builder
 
   .form-group
     = f.hidden_field :_destroy
     = link_to fa_icon("close", text: "Remove Question"), "#", class: "btn btn-danger btn-xs",
       data: { behavior: "remove_question_fields" }
     = link_to_add_fields fa_icon("plus", text: "Add some choices"), f,
-      :choices, "btn btn-success btn-xs #{show_choice_button(f.object.question_type_id)}"
+      :choices, "btn btn-success btn-xs #{show_choice_button(f.object.question_type)}"
     = link_to_add_fields fa_icon("plus", text: "Add some images"), f,
-      :images, "btn btn-default btn-xs #{show_image_button(f.object.question_type_id)}"
+      :images, "btn btn-default btn-xs #{show_image_button(f.object.question_type)}"
 
   /= f.fields_for :options do |builder|
   /= render "option_fields", f: builder
