Change button remove info image

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -103,7 +103,7 @@ small.handle {
   cursor: move;
 }
 
-.image-fields {
+.image-fields, .info-image-fields {
   margin-bottom: 15px;
   .media-body {
     width: inherit;
