--- a/app/views/answers/_index.html.haml
+++ b/app/views/answers/_index.html.haml
@@ -1,5 +1,5 @@
 #answers-list.modal.fade
-  .modal-dialog
+  .modal-dialog.modal-lg
     .modal-content
       .modal-header
         %button.close{"aria-label": "Close", "data-dismiss": "modal", type: "button"}
